--- a/intro/fullstack-app/fullstack-app/.env
+++ b/intro/fullstack-app/fullstack-app/.env
@@ -1,5 +1,5 @@
-DATABASE_URL="postgresql://postgres:zJhzgvpdN7kYIwvPfKcg@containers-us-west-156.railway.app:7597/railway"
+DATABASE_URL=postgresql://postgres:zJhzgvpdN7kYIwvPfKcg@containers-us-west-156.railway.app:7597/railway
 
-JWT_SECRET="nextjsfrontendmastersfullstackcourse"
+JWT_SECRET=nextjsfrontendmastersfullstackcourse
 
-COOKIE_NAME="nextjsfrontendmastersfullstackcourseCOOKIE"
+COOKIE_NAME=nextjsfrontendmastersfullstackcourseCOOKIE
